Bug 60938 - [softpipe] piglit interpolation-noperspective-gl_BackColor-flat-fixed regression
Summary: [softpipe] piglit interpolation-noperspective-gl_BackColor-flat-fixed regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-02-16 02:55 UTC by Vinson Lee
Modified: 2013-02-19 14:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-02-16 02:55:45 UTC
mesa: f1ab67c13ab97f19c08d99c6ba101edc7d7b80e6 (master)

$ ./bin/shader_runner generated_tests/spec/glsl-1.30/execution/interpolation/interpolation-noperspective-gl_BackColor-flat-fixed.shader_test -auto
Mesa warning: failed to remap glClampColorARB
Mesa warning: failed to remap glTexBufferARB
Mesa warning: failed to remap glFramebufferTextureARB
Mesa warning: failed to remap glVertexAttribDivisorARB
Mesa warning: failed to remap glProgramParameteriARB
Probe at (159,45)
  Expected: 0.272727 0.181818 0.545455 1.000000
  Observed: 0.474510 0.160784 0.364706 1.000000
Probe at (192,38)
  Expected: 0.153846 0.153846 0.692308 1.000000
  Observed: 0.266667 0.133333 0.596078 1.000000
Probe at (216,33)
  Expected: 0.066667 0.133333 0.800000 1.000000
  Observed: 0.117647 0.117647 0.764706 1.000000
Probe at (166,83)
  Expected: 0.166667 0.333333 0.500000 1.000000
  Observed: 0.294118 0.294118 0.415686 1.000000
Probe at (196,71)
  Expected: 0.071429 0.285714 0.642857 1.000000
  Observed: 0.125490 0.250980 0.627451 1.000000
Probe at (136,136)
  Expected: 0.181818 0.545455 0.272727 1.000000
  Observed: 0.317647 0.478431 0.203922 1.000000
Probe at (173,115)
  Expected: 0.076923 0.461538 0.461538 1.000000
  Observed: 0.129412 0.403922 0.462745 1.000000
Probe at (145,166)
  Expected: 0.083333 0.666667 0.250000 1.000000
  Observed: 0.149020 0.603922 0.247059 1.000000
PIGLIT: {'result': 'fail' }


4a938ef7136a89c828ebb16effe1bc5bea08b7d7 is the first bad commit
commit 4a938ef7136a89c828ebb16effe1bc5bea08b7d7
Author: Brian Paul <brianp@vmware.com>
Date:   Mon Jan 21 11:32:49 2013 -0700

    draw: add new debug code and comments in clip code template

    In debug builds, set clipped vertex window coordinates to NaN values
    to help debugging.  Otherwise, we're just leaving the coordinate in clip
    space and it's invalid to use it later expecting it to be a window coord.

    Reviewed-by: José Fonseca <jfonseca@vmware.com>

:040000 040000 1c9a933b785f0a56ebf2f13874aacffc4183e976 b87acb6dca3e64abd30f9da1d7483ac61364fb9e M      src
bisect run success
Comment 1 Brian Paul 2013-02-19 14:29:37 UTC
Fixed with commit 5da967aff5adb3e27954488206fb885ea1ede0fd


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.